fix: improperly aligned header links (#712)

--- a/src/layout/header/Header.css
+++ b/src/layout/header/Header.css
@@ -9,11 +9,6 @@
   background: #303230;
 }
 
-.theme-icon {
-  width: 1rem;
-  transition: all 0.1s;
-}
-
-.theme-icon:hover {
-  transform: scale(1.1);
+.bulb-dark {
+  color: #fff;
 }
